Fixed Perspective Transform Worker to work properly

1) The class is cleaned up (use QTransform instead of explicit matrix computation)
2) The usage of split rects make the transformation very-very-very fast

BUG:303452